overflow industry assoc fix

--- a/css/agency.css
+++ b/css/agency.css
@@ -9,17 +9,6 @@ body {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-::selection {
-  background: #000;
-  color: #fff;
- /* WebKit/Blink Browsers */
-}
-
-::-moz-selection {
-  background: #000;
-  color:#fff; /* Gecko Browsers */
-}
-
 .text-muted {
     color: #777;
 }
@@ -544,6 +533,12 @@ aside.clients img {
     border: 6px solid rgba(51, 51, 51, 0.77)
 }
 
+@media(max-width: 993px) {
+  .col-sm-2 {
+
+  }  
+}
+
 section#contact {
     background-color: #222;
     background-image: url(../img/map-image.png);
@@ -739,12 +734,14 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #999999;
+    background: #222;
+    color: #fff;
 }
 
 ::selection {
     text-shadow: none;
-    background: #999999;
+    background: #222;
+    color: #fff;
 }
 
 img::selection {
@@ -756,5 +753,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #999999;
+    webkit-tap-highlight-color: #222;
 }
